# autoforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  program.md  pyproject.toml  train.py
.github/workflows/: ci.yml  publish-pypi.yml
configs/: example_config.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  main.tsx  styles.css
dashboard/src/pages/: ExperimentDetail.tsx  ExperimentsList.tsx  StudyView.tsx
docs/blog/: autoforge-launch-draft.md
docs/releases/: v0.1.0-draft.md
examples/: agent_optimization.py  simple_optimization.py
mltune/: __init__.py  cli.py
mltune/api/: __init__.py  routes.py
mltune/core/: __init__.py  config.py  experiment.py  registry.py
mltune/optim/: __init__.py  agent.py  base.py  bayesian.py  grid.py  study.py  tuner.py
mltune/tracker/: __init__.py  backend.py  metrics.py  visualizer.py
mltune/utils/: __init__.py  common.py  device.py  seed.py
scripts/: quick_start.sh
tests/: test_config.py  test_experiment.py
