[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoforge-mltune"
version = "0.1.0"
description = "AutoForge — An intelligent machine learning hyperparameter tuning platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AutoForge Team", email = "team@autoforge.dev" }
]
keywords = [
    "machine-learning",
    "hyperparameter-tuning",
    "auto-ml",
    "optimization",
    "deep-learning",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "optuna>=3.4.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
distributed = [
    "deepspeed>=0.12.0",
    "accelerate>=0.24.0",
]
all = [
    "mltune[dev,distributed]",
]

[project.scripts]
mltune = "mltune.cli:main"

[project.urls]
Homepage = "https://github.com/kanlishiyi/autoforge"
Documentation = "https://github.com/kanlishiyi/autoforge/wiki"
Repository = "https://github.com/kanlishiyi/autoforge.git"
Issues = "https://github.com/kanlishiyi/autoforge/issues"
Changelog = "https://github.com/kanlishiyi/autoforge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["mltune"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["mltune"]
skip = [".venv", "migrations"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=mltune --cov-report=term-missing"
